# edinet-label

./: .gitignore  README.rst  pyproject.toml
src/edinet_label/: __init__.py  redis_adapter.py  taxonomy_get.py  taxonomy_set.py  zip_util.py
tests/: test_edinet_label.py  test_redis_adapter.py  test_zip_util.py
