[tool.poetry]
name = "edinet-label"
version = "0.1.0"
description = ""
authors = ["atu4403 <73111778+atu4403@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
bs4 = "^0.0.1"
lxml = "^4.6.3"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "redis",
]
ignore_missing_imports = true